# iot-data-collector-server

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: schemas.py  settings.py
backend/src/db/: database.py  models.py
backend/src/routers/: devices.py  frontend.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/pages/: DeviceDetail.tsx  Devices.tsx
grafana/provisioning/dashboards/: dashboards.yaml  iot-dashboard.json
grafana/provisioning/datasources/: datasource.yaml
scripts/: Dockerfile  requirements.txt  run_simulator.sh  simulate_devices.py
